k8s/flask-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: flask-deployment
  namespace: flask-app

spec: 
  replicas: 2
  selector: 
    matchLabels: 
      app: flask-app
  
  template: 
    metadata: 
      labels: 
        app: flask-app
    spec: 
      containers: 
         - name: flask-container
           image: techinnovihamid/flask-um-app:latest
             #           imagePullPolicy: IfNotPresent

           ports: 
             - containerPort: 5000
