k8s/postgres-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata: 
  name: postgres
  namespace: flask-app

spec: 
  serviceName: db
  replicas: 1
  selector: 
    matchLabels: 
      app: postgres
  template:
    metadata: 
      labels: 
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports: 
            - containerPort: 5432
           
          resources:
            requests: 
              cpu: "200m"
              memory: "256Mi"
            limits: 
              cpu: "500m"
              memory: "512Mi"  

          volumeMounts: 
            - name: postgres-storage 
              mountPath: /var/lib/postgresql
  volumeClaimTemplates:
    - metadata: 
        name: postgres-storage
      spec: 
        accessModes: ["ReadWriteOnce"]
        resources: 
          requests:
            storage: 1Gi
