k8s/flask-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: flask-service
  namespace: flask-app

spec: 
  selector: 
    app: flask-app  
  ports: 
    - port: 5000
      targetPort: 5000
      nodePort: 30007
  type: NodePort
