k8s/postgres-headless-svc.yaml
apiVersion: v1
kind: Service
metadata: 
  name: db
  namespace: flask-app

spec: 
  clusterIP: None
  selector: 
    app: postgres 
  ports: 
    - port: 5432
      targetPort: 5432
